# recipe-scraper

./: Cargo.toml  README.md
src/: lib.rs  schema_org.rs
