[package]
name = "recipe-scraper"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A library for parsing structured recipes from the web"
rust-version = "1.56"
repository = "https://github.com/torrancew/recipe-scraper"

[dependencies]
accessory = "2.0.0"
iso8601-duration = { version = "0.2.0", features = ["serde"] }
pretty-duration = "0.1.1"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
